# jay-first-cli-text-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: development-review.md
examples/: sample.txt
src/first_cli/: __init__.py  app.py  args_function.py  cli.py  create_json.py  summarize.py  text_status.py  word_chunk.py  word_freq.py
tests/: test_cli.py  test_createjson.py  test_summarize.py  test_text_status.py  test_word_chunk.py  test_word_freq.py
